Fixed some prefix issues and flag spawning issues

--- a/Capture The Flag/plugin.yml
+++ b/Capture The Flag/plugin.yml
@@ -12,3 +12,5 @@ commands:
     description: Main capture the flag arena setup command.
   vote:
     description: Main voting command
+  classes:
+    description: Class selection gui
